# RustScale

./: .gitignore  AI_README.md  LICENSE  README.md  analysis_report.md  async-broken-ui.md  async-improved-ui.md  async.md  non-async.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
docs/: RustScale Documentation.md
src/: app.css
src-tauri/: Cargo.toml  desktop.ini  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/models/: 4xNomosUni_span_multijpg_fp32_opset17.onnx  SAFMNv3_x4.onnx  model_config.json
src-tauri/scripts/: diagnose.ps1
src-tauri/src/: commands.rs  error.rs  gpu.rs  image_processing.rs  inference.rs  lib.rs  logging.rs  main.rs  metadata.rs  models.rs  state.rs  tests.rs
src-tauri/src/engine/: mod.rs
src/lib/: state.svelte.ts
src/lib/actions/: clickOutside.ts
src/lib/components/: BatchView.svelte  DropZone.svelte  ImageComparison.svelte  ModelEditor.svelte  Sidebar.svelte  SystemInfo.svelte  Toast.svelte
src/routes/: +layout.svelte  +page.svelte
