[package]
name = "tauri-apprustscale"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_apprustscale_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["webp"] }
fast_image_resize = "5.0"
exif = { package = "kamadak-exif", version = "0.5" }
tracing = "0.1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
bytes = "1.0"
tauri-plugin-dialog = "2.4.2"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
sysinfo = "0.37.2"
half = { version = "2.3", features = ["bytemuck"] }
rayon = "1.10"
webp = "0.3"
img-parts = "0.3"
little_exif = "0.5"
memmap2 = "0.9.9"
tracing-appender = "0.2.4"
notify = "8.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["load-dynamic", "directml", "openvino", "half"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["load-dynamic", "cuda", "rocm", "openvino", "half"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["load-dynamic", "coreml", "half"] }

# OPTIMIZATION: Enable full optimizations for dependencies even in debug mode.
# This makes image encoding (PNG/WebP) 10-50x faster without slowing down app compilation.
[profile.dev.package."*"]
opt-level = 3

